Removedd cookies age, cookies will truncate after closing browser, some fixes in routing, adding 404 page

--- a/frontend/vite-project/src/styles/App.css
+++ b/frontend/vite-project/src/styles/App.css
@@ -7,3 +7,11 @@
 .read-the-docs {
   color: #888;
 }
+
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 4em);
+}
